Added category management, change the way to store images, anb moved selectScreen to appStore